# QwenCode

./: .gitignore  .gitmodules  README.md  dream_meteorology.json  dream_meterology,_weather_prediction.json  dream_meterology.json  env_setup.sh  main.py  mpk_server.py  patch.py  pyproject.toml  setup_mirage_qwen3_blackwell.sh   setup_qwen35.sh
src/: qwencode.py  run_dream.py
src/browser/: controller.py  session.py  transcript_mirror.py
src/config/: config.py  prompt.py
src/dream/: config.py  context.py  research.py  session.py  train_distillation.py
src/dream/agents/: base.py  cloud.py  medium.py  small.py
src/dream/memory/: dream_memory.py
src/dream/phases/: __init__.py
src/memory/: __init__.py  fast_llm.py  local_llm.py  store.py
src/tools/: api.py  definitions.py  tools.py
src/ui/: banner.py  dream_ui.py  home.py  live_render.py  rich_ui.py  task_tracker.py  terminal_shell.py
tests/: test_dream_context.py  test_dream_enhancements.py  test_dream_memory.py  test_memory_store_research.py  test_model_display.py
