[project]
name = "qwencode"
version = "0.1.0"
description = "Terminal-first Qwen harness with browser automation, Dream training, and durable memory."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-use>=0.12.6",
    "openai>=2.16.0",
    "playwright>=1.58.0",
    "psycopg2-binary>=2.9.10",
    "prompt-toolkit>=3.0.52",
    "rich>=14.3.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
